updated deprecated syntaxfeat: Add initial SmartJournal application with API integration, user authentication, main JavaFX UI, and summary generation.